# NYC-Route-Optimizer

./: README.md  app.py  data_import.py  package.json  pyproject.toml
data/: sampled_cleaned_data.csv
scripts/: data_import.py  route_map.html  shortest_path_algo.py  shortest_path_map.html  uber_route_map.html
src/algorithms/: a_star.py  dijkstra.py  route_optimizer.py
src/data/: __init__.py  data_loader.py  data_preprocessor.py  graph_builder.py  traffic_analyzer.py
src/utils/: __init__.py  distance_calculator.py  geocoding.py
src/visualization/: route_visualizer.py
templates/: index.html
tests/: Test_DataProcess.py  __init__.py  test_graphbuilding.py
