[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uber-route-optimization"
version = "0.1.0"
description = "Uber route optimization project"
authors = [
    {name = "Baobin", email = "baobindl@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.3",
    "numpy>=1.21.2",
    "geopy>=2.2.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=5.4.1",
    "folium>=0.12.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v -s"